updating master branch, and front pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /.quarto/
 how-to-publish.txt
 post-ideas.txt
+reminder-notes.txt
+ideas.txt
+3-cards-riddle.rtf
+main-loredo.pdf
+stabilizer-term.jpeg
+gauthier-cubature-final.ipynb
+infomrationaboutnormal2.nb
+logp-pymc.txt
+Sym_Diff.nb
+posts/acoustic-bayes/
